# f1tenth_cdsl_uos

./: README.md
2d-object-tracking/: main.py
archive/: 2024-09-03-sewonkim.md  2024-09-10-sewonkim.md
laser_processor/: CMakeLists.txt  README.md  package.xml
laser_processor/src/: laser_processor_node.cpp
local_costmap_generator/: CMakeLists.txt  README.md  package.xml
local_costmap_generator/include/local_costmap_generator/: local_costmap_generator.hpp
local_costmap_generator/src/: local_costmap_generator.cpp  local_costmap_generator_node.cpp
local_planner/: CMakeLists.txt  README.md  package.xml
local_planner/include/local_planner/: local_planner.hpp  local_planner_ros.hpp  mpc_base.hpp  mpc_template.hpp  mpc_types.hpp
local_planner/src/: local_planner_node.cpp  local_planner_ros.cpp  mpc_base.cpp
object-tracking/: main.py
path-planning/: find_theta.py
path-planning/hybird-a-star/decision_making/: behavior_decision_making.py  behavior_decision_making_practice.py  main.py  main_practice.py
path-planning/hybird-a-star/env_basic/: 01_start_highway_env.py  02_discrete_action_control.py  03_continuous_action_control.py  04_observation.py  05_toy_project.py
path-planning/hybird-a-star/lateral_control/: linear_quadratic_gaussian.py  linear_quadratic_gaussian_practice.py  linear_quadratic_regulator.py  linear_quadratic_regulator_practice.py  main.py  main_practice.py  model_predictive_control.py  model_predictive_control_practice.py  pure_pursuit.py  pure_pursuit_practice.py  speed_controller.py  stanley_method.py  stanley_method_practice.py
path-planning/hybird-a-star/longitudinal_control/: linear_quadratic_regulator.py  linear_quadratic_regulator_practice.py  linear_quadratic_regulator_with_delay.py  linear_quadratic_regulator_with_delay_practice.py  main.py  main_practice.py  model_predictive_control.py  model_predictive_control_practice.py  pid_controller.py  pid_controller_practice.py
path-planning/hybird-a-star/motion_planner/collision_avoidance/: collision_avoidance_trajectory_planner.py  collision_avoidance_trajectory_planner_practice.py  main.py  main_practice.py  steering_controller.py
path-planning/hybird-a-star/motion_planner/lane_change/: behavior_decision_making_and_motion_planner.py  behavior_decision_making_and_motion_planner_practice.py  lane_change_trajectory_planner.py  lane_change_trajectory_planner_practice.py  main.py  main_practice.py
path-planning/hybird-a-star/motion_planner/parking/: main.py  main_practice.py  parking_motion_planner.py  parking_motion_planner_practice.py
path-planning/hybird-a-star/project/intersection/: behavior_decision_making.py  constant_acceleration_prediction.py  constant_velocity_prediction.py  intersection_localization.py  intersection_motion_planner.py  intersection_system.py  lqr_path_tracking_controller.py  main.py  pid_speed_controller.py
path-planning/hybird-a-star/project/lane_change/: behavior_decision_making.py  lane_change_motion_planner.py  lane_change_system.py  lqr_car_following_controller.py  main.py  pid_speed_controller.py  pure_pursuit_path_tracking_controller.py
path-planning/hybird-a-star/route_planner/free_space/: a_star_route_planner.py  a_star_route_planner_practice.py  hybrid_a_star_route_planner.py  hybrid_a_star_route_planner_practice.py
path-planning/hybird-a-star/route_planner/road_network/: a_star_route_planner.py
planner/svg_mppi/: CMakeLists.txt  README.md  package.xml
planner/svg_mppi/custom_msgs/mppi_metrics_msgs/: CMakeLists.txt  package.xml
planner/svg_mppi/custom_msgs/mppi_metrics_msgs/msg/: MPPIMetrics.msg
planner/svg_mppi/custom_msgs/waypoint_msg/: CMakeLists.txt  package.xml
planner/svg_mppi/custom_msgs/waypoint_msg/msg/: Waypoint.msg
planner/svg_mppi/mppi_controller/: CMakeLists.txt  README.md  package.xml
planner/svg_mppi/mppi_controller/config/: mppi_controller.yaml
planner/svg_mppi/mppi_controller/include/mppi_controller/: forward_mppi.hpp  mppi_controller_ros.hpp  reverse_mppi.hpp  stein_variational_guided_mppi.hpp
planner/svg_mppi/mppi_controller/src/: forward_mppi.cpp  mppi_controller_node.cpp  reverse_mppi.cpp  stein_variational_guided_mppi.cpp  stein_variational_mpc.cpp
planner/svg_mppi/src/: my_node.cpp
planner/wall_follow/: package.xml  setup.py
ros2-study/: README.md
wall_follow/: README.md
