<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_costmap_generator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="prepared7913@naver.com">root</maintainer>
  <license>MIT</license>

  <!-- Dependencies for build and execution -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for ROS2 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf2</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <depend>omp</depend>

  <!-- Dependencies for test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
